--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
     <div class="container">
         <header>
             <div class="brand-logo">ARBY AUDIO</div>
-            <p class="brand-tagline">Physics-Based 3D Spatial Audio | 7.1.4 @ 96kHz 32-bit</p>
+            <p class="brand-tagline">Physics-Based 3D Spatial Audio | 7.1.4 @ 96kHz 32-bit
+             Available at https://github.com/space-contributes/arby-audio_3d/ </p>
         </header>
 
         <div class="main-grid">
@@ -348,7 +349,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="title" content="Arby Audio 3D - Cinematic Spatial Sound Engine">
 <meta name="description" content="Experience living sound that adapts, bounces, and reacts with advanced object-based 7.1.4 spatial realism. Made by Spacecode after 7 years of innovation.">
-<meta name="keywords" content="3D Audio, Spatial Sound, Surround Engine, Binaural, 7.1.4, Dolby Atmos, Cinematic Audio, Python, Arby Audio, Spacecode">
+<meta name="keywords" content="3D Audio, Spatial Sound, Surround Engine, Binaural, 7.1.4, Dolby Atmos, Cinematic Audio, Python, Arby Audio, Spacecode, Space-code, Space-code">
 <meta name="author" content="Spacecode">
 <meta name="robots" content="index, follow">
 
@@ -356,7 +357,7 @@
 <meta property="og:title" content="Arby Audio 3D - Cinematic Spatial Sound Engine">
 <meta property="og:description" content="Living sound that adapts and reacts — advanced 7.1.4 spatial realism. Experience audio that feels alive.">
 <meta property="og:image" content="https://raw.githubusercontent.com/spacecontributes/arbyaudio_3d/refs/heads/main/Arby%20Logo%20Design%20Proto11.jpg">
-<meta property="og:url" content="https://spacecontributes.github.io/arbyaudio_3d/">
+<meta property="og:url" content="https://spacecontributes.github.io/arby-audio_3d/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
@@ -1015,3 +1016,4 @@
 </body>
 
 </html>
+
