--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
     <div class="container">
         <header>
             <div class="brand-logo">ARBY AUDIO</div>
-            <p class="brand-tagline">Physics-Based 3D Spatial Audio | 7.1.4 @ 96kHz 32-bit
-             Available at https://github.com/space-contributes/arby-audio_3d/ </p>
+            <p class="brand-tagline">-- Available at https://github.com/space-contributes/arby-audio_3d/ -- | Physics-Based 3D Spatial Audio | 7.1.4 @ 96kHz 32-bit |
+             </p>
         </header>
 
         <div class="main-grid">
@@ -1016,4 +1016,5 @@
 </body>
 
 </html>
+
 
