--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <div class="container">
         <header>
             <div class="brand-logo">ARBY AUDIO</div>
-            <p class="brand-tagline">-- Available at <a href="https://www.example.com">GitHub Link</a>  | Physics-Based 3D Spatial Audio | 7.1.4 @ 96kHz 32-bit |
+            <p class="brand-tagline">-- Available at <a class="brand-logo" href="https://github.com/space-contributes/arby-audio_3d/">GitHub Project Link </a>, | Physics-Based 3D Spatial Audio | 7.1.4 @ 96kHz 32-bit |
              </p>
         </header>
 
@@ -1016,6 +1016,7 @@
 </body>
 
 </html>
+
 
 
 
